--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery.graphly.min.js"></script>
+        <script src="../js/jquery.min.js"></script>
+        <script src="../js/jquery.graphly.min.js"></script>
         <title>Graphly Demo</title>
         <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap-responsive.min.css" />
