Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
 <li>Internet Explorer 9+</li>
 <li>Opera</li>
 <li>Safari</li>
-</ul><h3>How Do I Use Graphly?</h3>
+</ul><h3>Examples</h3>
+
+<p>To see some examples of Graphly in use, visit the demo page at <a href="http://www.getgraphly.com/demo/">http://www.getgraphly.com/demo/</a></p>
+
+<h3>How Do I Use Graphly?</h3>
 
 <p>The first step is to include the jQuery and Graphly libraries inside the head tags of your HTML document and ensure the HTML 5 doctype is being used, as in this template:</p>
 
@@ -323,9 +327,11 @@
 
 <h3>Current Limitations</h3>
 
-<p>As Graphly is still in the early stages of development, it is still limited in a number of senses; primarily that it can only produce bar charts, and cannot handle negative values.</p>
+<p>As Graphly is still in the early stages of development, it is still limited in a number of senses; primarily that it can only produce bar charts.</p>
 
-<p>Multiple graph types and support for both positive and negative values are currently planned as new features to be added in the near future, so keep checking back if these are issues for you.</p>
+<p>Multiple graph types are currently planned as new features to be added in the near future, so keep checking back if this is an issue for you.</p>
+
+<p>Alternatively, <a href="https://github.com/rastating/graphly/issues/new">Open an Issue</a> to bring suggestions and bugs to light.</p>
 
 <h3>Authors and Contributors</h3>
 
