Changed demo link to open in new window

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <li>Safari</li>
 </ul><h3>Examples</h3>
 
-<p>To see some examples of Graphly in use, visit the demo page at <a href="http://www.getgraphly.com/demo/">http://www.getgraphly.com/demo/</a></p>
+<p>To see some examples of Graphly in use, visit the demo page at <a href="http://www.getgraphly.com/demo/" target="_blank">http://www.getgraphly.com/demo/</a></p>
 
 <h3>How Do I Use Graphly?</h3>
 
