Updated version number and minified version

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="../js/jquery.min.js"></script>
-        <script src="../js/jquery.graphly.js"></script>
+        <script src="../js/jquery.graphly.min.js"></script>
         <title>Graphly Demo</title>
         <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap-responsive.min.css" />
