Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </ul>
       </header>
       <section>
-        <h3>Welcome to Graphly.</h3>
+        <h3>
+<a name="welcome-to-graphly" class="anchor" href="#welcome-to-graphly"><span class="octicon octicon-link"></span></a>Welcome to Graphly.</h3>
 
 <p>Graphly is an easy to use and lightweight jQuery plugin which allows you to transform your data into clean and customisable graphs. See below an example of a graph created using Graphly.</p>
 
@@ -42,11 +43,13 @@
 <li>Internet Explorer 9+</li>
 <li>Opera</li>
 <li>Safari</li>
-</ul><h3>Examples</h3>
+</ul><h3>
+<a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>Examples</h3>
 
-<p>To see some examples of Graphly in use, visit the demo page at <a href="http://www.getgraphly.com/demo/" target="_blank">http://www.getgraphly.com/demo/</a></p>
+<p>To see some examples of Graphly in use, visit the demo page at <a href="http://www.getgraphly.com/demo/">http://www.getgraphly.com/demo/</a></p>
 
-<h3>How Do I Use Graphly?</h3>
+<h3>
+<a name="how-do-i-use-graphly" class="anchor" href="#how-do-i-use-graphly"><span class="octicon octicon-link"></span></a>How Do I Use Graphly?</h3>
 
 <p>The first step is to include the jQuery and Graphly libraries inside the head tags of your HTML document and ensure the HTML 5 doctype is being used, as in this template:</p>
 
@@ -155,13 +158,19 @@
 <p>In addition to the <strong>data</strong> setting that is passed in the above example, the following optional settings can be specified:</p>
 
 <ul>
+<li>customTheme - a custom theme definition to use instead of a built-in theme</li>
+<li>height - the initial height of the canvas to draw on</li>
 <li>paddingTop - the padding applied to the top of the canvas in pixels</li>
 <li>paddingLeft - the padding applied to the left of the canvas in pixels</li>
 <li>paddingBottom - the padding applied to the bottom of the canvas in pixels</li>
 <li>paddingRight - the padding applied to the right of the canvas in pixels</li>
+<li>removeBorders - a boolean value indicating whether or not to remove borders from bars</li>
 <li>showLabels - a boolean value indicating whether or not to show the axis labels</li>
 <li>showLegend - a boolean value indicating whether or not to show the legend</li>
-</ul><h3>Constructing Data</h3>
+<li>theme - the name of the built-in theme to use</li>
+<li>width - the initial width of the canvas to draw on</li>
+</ul><h3>
+<a name="constructing-data" class="anchor" href="#constructing-data"><span class="octicon octicon-link"></span></a>Constructing Data</h3>
 
 <p>Currently Graphly is capable of generating graphs which consist of one or more groups of data. An example of a data set that contains one group of data can be found below. Within the root object are three objects, <strong>xLabel</strong>, <strong>yLabel</strong> and <strong>groups</strong>. The label objects contain the axis labels that will be displayed on the graph, and the groups object contains an array of objects which represent groups of entities and data values.</p>
 
@@ -325,7 +334,8 @@
 
 <p>If no colour is specified the default colour selection will be used for that particular entity.</p>
 
-<h3>Current Limitations</h3>
+<h3>
+<a name="current-limitations" class="anchor" href="#current-limitations"><span class="octicon octicon-link"></span></a>Current Limitations</h3>
 
 <p>As Graphly is still in the early stages of development, it is still limited in a number of senses; primarily that it can only produce bar charts.</p>
 
@@ -333,7 +343,8 @@
 
 <p>Alternatively, <a href="https://github.com/rastating/graphly/issues/new">Open an Issue</a> to bring suggestions and bugs to light.</p>
 
-<h3>Authors and Contributors</h3>
+<h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>Graphly is developed by <a href="http://rastating.com/">rastating</a>, and can be found on the following networks:</p>
 
