Added line graph support

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="../js/jquery.min.js"></script>
-        <script src="../js/jquery.graphly.min.js"></script>
+        <script src="../js/jquery.graphly.js"></script>
         <title>Graphly Demo</title>
         <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" media="screen" href="bootstrap/css/bootstrap-responsive.min.css" />
@@ -75,7 +75,7 @@
             
             <div class="row">
                 <div class="span12 text-center example" id="basic-graph-container">
-                    <h2>Netflix Stock Price History <a class="btn btn-primary btn-mini" href="basic_graph.js" target="_blank">View Code</a></h2>
+                    <h2>Stock History for 2012 <a class="btn btn-primary btn-mini" href="basic_graph.js" target="_blank">View Code</a></h2>
                     <canvas id="basic-graph" height="400" width="900"></canvas>
                 </div>
                 <div class="span12 text-center example" id="custom-colours-container" style="display: none;">
