--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>Graphly is an easy to use and lightweight jQuery plugin which allows you to transform your data into clean and customisable graphs. See below an example of a graph created using Graphly.</p>
 
-<p><img src="http://rastating.com/graphly-bar-chart.jpg" alt="Graphly Sample"></p>
+<p><img src="http://blog.rastating.com/content/images/misc/graphly-bar-chart.jpg" alt="Graphly Sample"></p>
 
 <p>Supported browsers include:</p>
 
