--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </ul><h3>
 <a name="examples" class="anchor" href="#examples"><span class="octicon octicon-link"></span></a>Examples</h3>
 
-<p>To see some examples of Graphly in use, visit the demo page at <a href="http://www.getgraphly.com/demo/">http://www.getgraphly.com/demo/</a></p>
+<p>To see some examples of Graphly in use, visit the demo page at <a href="http://rastating.github.io/graphly/demo/">http://rastating.github.io/graphly/demo/</a></p>
 
 <h3>
 <a name="how-do-i-use-graphly" class="anchor" href="#how-do-i-use-graphly"><span class="octicon octicon-link"></span></a>How Do I Use Graphly?</h3>
